tests/error/py_errors/list_empty.py
from guppylang.decorator import guppy


@guppy
def foo() -> None:
    xs = py([])
